fixed extra white space in firefox

--- a/src/components/notes/notes.less
+++ b/src/components/notes/notes.less
@@ -20,7 +20,6 @@
 
       > .ant-card-body {
         padding: 10px;
-        white-space: pre-wrap;
         height: 100%;
         overflow-y: scroll;
 
@@ -29,7 +28,8 @@
           margin: 0;
           padding: 5px;
           max-height: 780px;
-          background-color: #ffffff;
+
+          white-space: pre-wrap;
         }
       }
     }
